# folder-mirror

./: .gitignore  README.md  flake.nix  pyproject.toml
dummy_source/: foobar
src/folder-mirror/: config_log.py  const.py  interval_delay.py  tree_walk.py
src/folder-mirror/command/: init.py
src/folder_mirror/: __main__.py  path_link.py  sync_action.py
src/folder_mirror/command/: sync.py
tests/test_tree_walk/: test_tree_walk.py
tests/test_tree_walk/test_env/original/: create_a
